--- a/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
@@ -42,8 +42,8 @@
                 android:clickable="true">
                 <ImageView
                     android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:src="@drawable/user_center_default"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
