--- a/EldYoungAndroidApp/Resources/layout/PersonLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonLayout.axml
@@ -33,16 +33,15 @@
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_gray"
+                    android:src="@drawable/arrow_right_blue"
                     android:layout_marginRight="15dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/img_person_arraw" />
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/user_center_default"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginRight="15dp"
                     android:layout_toLeftOf="@id/img_person_arraw"
                     android:id="@+id/img_person_head" />
             </RelativeLayout>
@@ -67,8 +66,19 @@
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_gray"
+                    android:src="@drawable/arrow_right_blue"
                     android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/img_basic_arraw" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="修改"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_basic_arraw"
+                    android:textSize="14sp"
+                    android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
             </RelativeLayout>
             <TextView
@@ -86,6 +96,7 @@
                 android:background="@drawable/relativelayoutselector"
                 android:clickable="true">
                 <TextView
+                    android:id="@+id/tv_person_loginPwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="登录密码"
@@ -94,12 +105,35 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
                     android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="登录账户时需要输入的密码"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_loginPwd"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_gray"
+                    android:src="@drawable/arrow_right_blue"
                     android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/img_loginPwd_arraw" />
+                <TextView
+                    android:id="@+id/tv_loginPwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="修改"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_loginPwd_arraw"
+                    android:textSize="14sp"
+                    android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
             </RelativeLayout>
         <!--支付密码 -->
@@ -111,6 +145,7 @@
                 android:layout_marginTop="3dp"
                 android:clickable="true">
                 <TextView
+                    android:id="@+id/tv_person_payPwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="支付密码"
@@ -119,12 +154,35 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
                     android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="支付账户时需要输入的密码"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_payPwd"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
+                    android:id="@+id/img_payPwd_arraw"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_gray"
+                    android:src="@drawable/arrow_right_blue"
                     android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true" />
+                <TextView
+                    android:id="@+id/tv_payPwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_payPwd_arraw"
+                    android:textSize="14sp"
+                    android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
             </RelativeLayout>
         <!--手机绑定 -->
@@ -136,6 +194,7 @@
                 android:layout_marginTop="3dp"
                 android:clickable="true">
                 <TextView
+                    android:id="@+id/tv_person_phoneBind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="手机绑定"
@@ -144,12 +203,35 @@
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
                     android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="手机绑定可享受更多的服务"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_phoneBind"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
+                    android:id="@+id/img_phoneBind_arraw"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_gray"
+                    android:src="@drawable/arrow_right_blue"
                     android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true" />
+                <TextView
+                    android:id="@+id/tv_phoneBind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_phoneBind_arraw"
+                    android:textSize="14sp"
+                    android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
             </RelativeLayout>
         <!--身份认证 -->
@@ -168,13 +250,37 @@
                     android:gravity="center"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="10dp"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/black"
+                    android:id="@+id/tv_person_identity" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="用于提升账号的安全和信任"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_identity"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
+                    android:id="@+id/img_identity_arraw"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_gray"
+                    android:src="@drawable/arrow_right_blue"
                     android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true" />
+                <TextView
+                    android:id="@+id/tv_identity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_identity_arraw"
+                    android:textSize="14sp"
+                    android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
             </RelativeLayout>
         </LinearLayout>
