--- a/EldYoungAndroidApp/Resources/layout/Guider_One.axml
+++ b/EldYoungAndroidApp/Resources/layout/Guider_One.axml
@@ -10,4 +10,17 @@
         android:focusable="true"
         android:scaleType="centerCrop"
         android:background="@drawable/guider1" />
+    <Button
+        android:id="@+id/btn_skip"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="13dp"
+        android:background="@drawable/shape"
+        android:text="跳过"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 </RelativeLayout>
