--- a/EldYoungAndroidApp/Resources/layout/Guider_Two.axml
+++ b/EldYoungAndroidApp/Resources/layout/Guider_Two.axml
@@ -10,4 +10,15 @@
         android:focusable="true"
         android:scaleType="centerCrop"
         android:background="@drawable/guider2" />
+    <Button
+        android:id="@+id/btn_skip"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="13dp"
+        android:background="@drawable/shape"
+        android:text="跳过"
+        android:textColor="@color/white"
+        android:textSize="15sp" />
 </RelativeLayout>
