--- a/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
+    android:minHeight="25px"
+    android:id="@+id/ll_person">
     <LinearLayout
         style="@style/action_bar"
         android:orientation="horizontal"
@@ -76,199 +77,244 @@
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
             </RelativeLayout>
-        <!--我的收藏 -->
-        <!--            <RelativeLayout
+        <!--基本资料 -->
+            <RelativeLayout
                 android:layout_height="30dp"
                 android:layout_width="match_parent"
+                android:id="@+id/rl_person_basic"
+                android:background="@drawable/relativelayoutselector"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/relativelayoutselector"
                 android:clickable="true">
-                <ImageView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/user_center_fav"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/img_fav" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/img_fav"
-                    android:layout_marginLeft="10dp"
-                    android:text="我的收藏"
+                    android:layout_height="wrap_content"
+                    android:text="基本资料"
                     android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:textColor="@android:color/background_dark" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@android:color/black" />
                 <ImageView
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/arrow_right_blue"
+                    android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/img_basic_arraw" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="修改"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_basic_arraw"
+                    android:textSize="14sp"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
-            </RelativeLayout>-->
-        <!--美食相册 -->
-        <!--            <RelativeLayout
+            </RelativeLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="账户安全"
+                android:layout_margin="10dp"
+                android:textSize="15sp"
+                android:textColor="@android:color/darker_gray" />
+        <!--登录密码 -->
+            <RelativeLayout
                 android:layout_height="30dp"
                 android:layout_width="match_parent"
-                android:layout_marginTop="1dp"
+                android:id="@+id/rl_person_loginPwd"
                 android:background="@drawable/relativelayoutselector"
                 android:clickable="true">
-                <ImageView
-                    android:layout_alignParentLeft="true"
+                <TextView
+                    android:id="@+id/tv_person_loginPwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/user_center_camera"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/img_camera" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/img_camera"
-                    android:layout_marginLeft="10dp"
-                    android:text="相册"
+                    android:text="登录密码"
                     android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:textColor="@android:color/background_dark" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="登录账户时需要输入的密码"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_loginPwd"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/arrow_right_blue"
+                    android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/img_loginPwd_arraw" />
+                <TextView
+                    android:id="@+id/tv_loginPwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="修改"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_loginPwd_arraw"
+                    android:textSize="14sp"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
-            </RelativeLayout>-->
-        <!--积分商城 -->
-        <!--            <RelativeLayout
+            </RelativeLayout>
+        <!--支付密码 -->
+            <RelativeLayout
                 android:layout_height="30dp"
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
+                android:id="@+id/rl_person_payPwd"
                 android:background="@drawable/relativelayoutselector"
+                android:layout_marginTop="3dp"
                 android:clickable="true">
-                <ImageView
-                    android:layout_alignParentLeft="true"
+                <TextView
+                    android:id="@+id/tv_person_payPwd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/user_center_integral"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/img_integral" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/img_integral"
-                    android:layout_marginLeft="10dp"
-                    android:text="积分商城"
+                    android:text="支付密码"
                     android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:textColor="@android:color/background_dark" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="支付账户时需要输入的密码"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_payPwd"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
+                    android:id="@+id/img_payPwd_arraw"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/arrow_right_blue"
+                    android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true" />
+                <TextView
+                    android:id="@+id/tv_payPwd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_payPwd_arraw"
+                    android:textSize="14sp"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
-            </RelativeLayout>-->
-        <!--会员卡 -->
-        <!--            <RelativeLayout
+            </RelativeLayout>
+        <!--手机绑定 -->
+            <RelativeLayout
                 android:layout_height="30dp"
                 android:layout_width="match_parent"
-                android:layout_marginTop="1dp"
+                android:id="@+id/rl_person_phoneBind"
                 android:background="@drawable/relativelayoutselector"
+                android:layout_marginTop="3dp"
                 android:clickable="true">
-                <ImageView
-                    android:layout_alignParentLeft="true"
+                <TextView
+                    android:id="@+id/tv_person_phoneBind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/user_center_vip"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/img_vip" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/img_vip"
-                    android:layout_marginLeft="10dp"
-                    android:text="会员卡"
+                    android:text="手机绑定"
                     android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:textColor="@android:color/background_dark" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="手机绑定可享受更多的服务"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_phoneBind"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
+                    android:id="@+id/img_phoneBind_arraw"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/arrow_right_blue"
+                    android:layout_marginRight="15dp"
+                    android:layout_centerVertical="true" />
+                <TextView
+                    android:id="@+id/tv_phoneBind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_phoneBind_arraw"
+                    android:textSize="14sp"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
-            </RelativeLayout>-->
-        <!--服务中心 -->
-        <!--            <RelativeLayout
+            </RelativeLayout>
+        <!--身份认证 -->
+            <RelativeLayout
                 android:layout_height="30dp"
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
+                android:id="@+id/rl_person_identity"
                 android:background="@drawable/relativelayoutselector"
+                android:layout_marginTop="3dp"
                 android:clickable="true">
-                <ImageView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/user_center_service"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/img_service" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/img_service"
-                    android:layout_marginLeft="10dp"
-                    android:text="服务中心"
+                    android:layout_height="wrap_content"
+                    android:text="身份认证"
                     android:layout_centerVertical="true"
                     android:gravity="center"
-                    android:textColor="@android:color/background_dark" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="@android:color/black"
+                    android:id="@+id/tv_person_identity" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="用于提升账号的安全和信任"
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toRightOf="@id/tv_person_identity"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_centerVertical="true" />
                 <ImageView
+                    android:id="@+id/img_identity_arraw"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/arrow_right_blue"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="15dp"
                     android:layout_centerVertical="true" />
-            </RelativeLayout>-->
-        <!--推荐给好友 -->
-        <!--            <RelativeLayout
-                android:layout_height="30dp"
-                android:layout_width="match_parent"
-                android:layout_marginTop="1dp"
-                android:background="@drawable/relativelayoutselector"
-                android:id="@+id/rl_share"
-                android:clickable="true">
-                <ImageView
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/user_center_share"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:id="@+id/img_share" />
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/img_share"
-                    android:layout_marginLeft="10dp"
-                    android:text="推荐给好友"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:textColor="@android:color/background_dark" />
-                <ImageView
-                    android:layout_alignParentRight="true"
+                    android:id="@+id/tv_identity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/arrow_right_blue"
+                    android:text=""
+                    android:gravity="center"
+                    android:textColor="@color/lightgray"
+                    android:layout_toLeftOf="@id/img_identity_arraw"
+                    android:textSize="14sp"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true" />
-            </RelativeLayout>-->
+            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
