--- a/EldYoungAndroidApp/Resources/layout/SetPasswordLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/SetPasswordLayout.axml
@@ -11,7 +11,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="60dp">
         <EditText
-            android:id="@+id/edit_ReisterPwd"
+            android:id="@+id/edit_Pwd"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:paddingLeft="35dp"
@@ -26,12 +26,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_register_password"
-            android:layout_alignLeft="@id/edit_ReisterPwd"
+            android:layout_alignLeft="@id/edit_Pwd"
             android:layout_marginLeft="10dp"
-            android:layout_alignBottom="@id/edit_ReisterPwd"
-            android:layout_alignTop="@id/edit_ReisterPwd" />
+            android:layout_alignBottom="@id/edit_Pwd"
+            android:layout_alignTop="@id/edit_Pwd" />
         <ImageView
-            android:id="@+id/img_eye_ReisterPwd"
+            android:id="@+id/img_eye_Pwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_register_eye_normal"
@@ -45,7 +45,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="5dp">
         <EditText
-            android:id="@+id/edit_ReisterConfirmPwd"
+            android:id="@+id/edit_ConfirmPwd"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:paddingLeft="35dp"
@@ -60,12 +60,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_register_password"
-            android:layout_alignLeft="@id/edit_ReisterConfirmPwd"
+            android:layout_alignLeft="@id/edit_ConfirmPwd"
             android:layout_marginLeft="10dp"
-            android:layout_alignBottom="@id/edit_ReisterConfirmPwd"
-            android:layout_alignTop="@id/edit_ReisterConfirmPwd" />
+            android:layout_alignBottom="@id/edit_ConfirmPwd"
+            android:layout_alignTop="@id/edit_ConfirmPwd" />
         <ImageView
-            android:id="@+id/img_eye_ReisterConfirmPwd"
+            android:id="@+id/img_eye_ConfirmPwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_register_eye_normal"
@@ -81,7 +81,7 @@
         android:layout_marginTop="50dp"
         android:text="提交"
         android:gravity="center"
-        android:enabled="false"
-        android:background="@color/blue"
+        android:enabled="true"
+        android:background="@drawable/btn_blue_selector"
         android:textColor="@color/white" />
 </LinearLayout>
