--- a/EldYoungAndroidApp/Resources/layout/SendSecurityCodeLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/SendSecurityCodeLayout.axml
@@ -54,7 +54,8 @@
             android:clickable="false"
             android:background="@drawable/btn_blue_selector"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:textColor="@color/white" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
