--- a/EldYoungAndroidApp/Resources/layout/AccountSecurityLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/AccountSecurityLayout.axml
@@ -6,7 +6,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:scrollbars="vertical">
         <LinearLayout
             android:orientation="vertical"
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:text="修改"
                     android:gravity="center"
-                    android:textColor="@color/lightgray"
+                    android:textColor="@color/blue"
                     android:layout_toLeftOf="@id/img_loginPwd_arraw"
                     android:textSize="14sp"
                     android:layout_marginRight="10dp"
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/rl_person_payPwd"
                 android:background="@drawable/relativelayoutselector"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="1dp"
                 android:clickable="true">
                 <TextView
                     android:id="@+id/tv_person_payPwd"
@@ -105,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:gravity="center"
-                    android:textColor="@color/lightgray"
+                    android:textColor="@color/blue"
                     android:layout_toLeftOf="@id/img_payPwd_arraw"
                     android:textSize="14sp"
                     android:layout_marginRight="10dp"
@@ -117,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/rl_person_phoneBind"
                 android:background="@drawable/relativelayoutselector"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="13dp"
                 android:clickable="true">
                 <TextView
                     android:id="@+id/tv_person_phoneBind"
@@ -155,7 +155,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:gravity="center"
-                    android:textColor="@color/lightgray"
+                    android:textColor="@color/blue"
                     android:layout_toLeftOf="@id/img_phoneBind_arraw"
                     android:textSize="14sp"
                     android:layout_marginRight="10dp"
@@ -167,7 +167,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/rl_person_identity"
                 android:background="@drawable/relativelayoutselector"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="1dp"
                 android:clickable="true">
                 <TextView
                     android:layout_width="wrap_content"
@@ -205,7 +205,7 @@
                     android:layout_height="wrap_content"
                     android:text=""
                     android:gravity="center"
-                    android:textColor="@color/lightgray"
+                    android:textColor="@color/blue"
                     android:layout_toLeftOf="@id/img_identity_arraw"
                     android:textSize="14sp"
                     android:layout_marginRight="10dp"
