--- a/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/Main_Tab_MyLayout.axml
@@ -210,7 +210,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
-                            android:text="400-998-8855"
+                            android:text="@string/customphoneNumber"
                             android:textColor="@color/blue"
                             android:textSize="16sp"
                             android:id="@+id/tv_customPhone" />
