--- a/EldYoungAndroidApp/Resources/layout/SendSecurityCodeLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/SendSecurityCodeLayout.axml
@@ -52,7 +52,7 @@
             android:text="获取验证码"
             android:textSize="15sp"
             android:clickable="false"
-            android:background="@drawable/btn_blue_selector"
+            android:background="@drawable/btn_orange_selector"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:textColor="@color/white" />
@@ -96,4 +96,27 @@
         android:enabled="false"
         android:background="@drawable/btn_blue_selector"
         android:textColor="@color/white" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="若当前号码停机、丢失、欠费或无法收到验证码,请联系客服:"
+            android:textColor="@color/lightgray"
+            android:textSize="12sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/customphoneNumber"
+            android:textColor="@color/blue"
+            android:textSize="14sp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/tv_customPhone" />
+    </LinearLayout>
 </LinearLayout>
