--- a/EldYoungAndroidApp/Resources/layout/guardianListitemView.axml
+++ b/EldYoungAndroidApp/Resources/layout/guardianListitemView.axml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="93dp"
     android:orientation="horizontal"
-    android:background="@color/lightwhite">
+    android:background="@color/white">
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
