--- a/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
@@ -31,7 +31,7 @@
                     android:id="@+id/tv_UserName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="lq_ever"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
@@ -66,7 +66,7 @@
                     android:id="@+id/tv_TrueName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="刘强"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_trueName_arraw"
                     android:gravity="center"
@@ -102,7 +102,7 @@
                     android:id="@+id/tv_IdCardNo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="342201198802024914"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_IdCardNo_arraw"
                     android:gravity="center"
@@ -138,7 +138,7 @@
                     android:id="@+id/tv_Gender"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="女"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_gender_arraw"
                     android:gravity="center"
@@ -174,7 +174,7 @@
                     android:id="@+id/tv_Birth"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1988-02-03"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_birth_arraw"
                     android:gravity="center"
@@ -211,7 +211,7 @@
                     android:id="@+id/tv_phoneNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="15821526948"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_phoneNumber_arraw"
                     android:gravity="center"
@@ -247,7 +247,7 @@
                     android:id="@+id/tv_fixedPhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="025-4750406"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_fixedPhone_arraw"
                     android:gravity="center"
@@ -283,7 +283,7 @@
                     android:id="@+id/tv_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="lq.linknet@gmail.com"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_email_arraw"
                     android:gravity="center"
@@ -319,7 +319,7 @@
                     android:id="@+id/tv_IdCardLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="安徽宿州"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_IdCardLocation_arraw"
                     android:gravity="center"
@@ -355,7 +355,7 @@
                     android:id="@+id/tv_TrueLocation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="江苏省南京市江宁区"
+                    android:text=""
                     android:layout_centerVertical="true"
                     android:layout_toLeftOf="@id/img_TrueLocation_arraw"
                     android:gravity="center"
