--- a/EldYoungAndroidApp/Resources/layout/AccountSecurityLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/AccountSecurityLayout.axml
@@ -3,11 +3,10 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <com.handmark.pulltorefresh.library.PullToRefreshScrollView xmlns:ptr="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/pull_refresh_scrollview"
+    <eldyoungandroidapp.common.CustomScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        ptr:ptrHeaderTextColor="@color/ingray">
+        android:scrollbars="vertical">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -212,5 +211,5 @@
                     android:layout_centerVertical="true" />
             </RelativeLayout>
         </LinearLayout>
-    </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
+    </eldyoungandroidapp.common.CustomScrollView>
 </LinearLayout>
