--- a/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoLayout.axml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-    <ScrollView
+    <eldyoungandroidapp.common.CustomScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical">
@@ -363,5 +363,5 @@
                     android:textColor="@color/lightgray" />
             </RelativeLayout>
         </LinearLayout>
-    </ScrollView>
+    </eldyoungandroidapp.common.CustomScrollView>
 </LinearLayout>
