--- a/EldYoungAndroidApp/Resources/layout/PersonInfoGenderLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoGenderLayout.axml
@@ -23,14 +23,20 @@
                 android:layout_weight="1"
                 android:text="男"
                 android:checked="true"
-                android:textColor="@color/lightgray" />
+                android:textColor="@color/lightgray"
+                android:button="@drawable/radiobutton_selector"
+                android:drawablePadding="20dp"
+                android:drawableLeft="@drawable/ic_sex_man" />
             <RadioButton
                 android:id="@+id/rbtn_female"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="女"
-                android:textColor="@color/lightgray" />
+                android:textColor="@color/lightgray"
+                android:button="@drawable/radiobutton_selector"
+                android:drawablePadding="20dp"
+                android:drawableLeft="@drawable/ic_sex_woman" />
         </RadioGroup>
     </LinearLayout>
     <Button
