--- a/EldYoungAndroidApp/Resources/layout/PersonInfoFixedPhoneLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoFixedPhoneLayout.axml
@@ -13,12 +13,14 @@
             android:layout_height="match_parent"
             android:padding="2dp"
             android:hint="区号"
-            android:background="@null"
+            android:background="@drawable/edit_advice_selector"
             android:inputType="number"
             android:textColor="@color/lightgray"
             android:textColorHint="@color/lightgray"
             android:textSize="12sp"
-            android:layout_marginLeft="15dp" />
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -35,7 +37,7 @@
             android:padding="2dp"
             android:hint="固定电话"
             android:inputType="phone"
-            android:background="@null" />
+            android:background="@drawable/edit_advice_selector" />
     </LinearLayout>
     <Button
         android:id="@+id/btn_Save"
