--- a/EldYoungAndroidApp/Resources/layout/PersonInfoTrueLocationLayout.axml
+++ b/EldYoungAndroidApp/Resources/layout/PersonInfoTrueLocationLayout.axml
@@ -5,34 +5,34 @@
     android:layout_height="fill_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:background="@color/white"
         android:orientation="vertical"
         android:layout_marginTop="15dp">
         <EditText
             android:id="@+id/edit_locationthreelevel"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@null"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:background="@drawable/edit_advice_selector"
             android:hint="省市区"
             android:textColor="@color/ingray"
             android:textColorHint="@color/ingray"
             android:textSize="14sp"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp" />
         <EditText
             android:id="@+id/edit_locationdeatil"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="40dp"
             android:hint="输入详细地址"
             android:textColor="@color/ingray"
             android:textColorHint="@color/ingray"
             android:textSize="14sp"
-            android:background="@null"
+            android:background="@drawable/edit_advice_selector"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp" />
     </LinearLayout>
     <Button
         android:id="@+id/btn_Save"
